--- a/CBLabs/package.json
+++ b/CBLabs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --output-path=D:/workspaces/sts_workspaces/workspace-sts-3.9.1.RELEASE/demo/src/main/resources/public/",
+    "build": "ng build --output-path=../CBLabsServer/src/main/resources/public/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
